--- a/WpfApplication3/NewWindow.xaml
+++ b/WpfApplication3/NewWindow.xaml
@@ -3,7 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="NewWindow" Height="600" Width="1000 " WindowStartupLocation="CenterScreen" AllowsTransparency="True" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown" Closed="Window_Closed">
     <Grid Background="#FF2E2E2E">
-        <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom"/>
+        <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom">
+            <StatusBarItem Content="石蚁科技有限公司" Height="25" VerticalAlignment="Top" Margin="10,0,0,0" HorizontalAlignment="Left"/>
+            <StatusBarItem x:Name="StatusBarItem_时间" Content="时间" Height="25" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,10,0"/>
+        </StatusBar>
         <TabControl Margin="0,50,0,25" BorderBrush="#FF00B7EE" BorderThickness="0,3,0,0" SelectionChanged="TabControl_SelectionChanged" Focusable="False">
             <TabItem Header="预算内户" FontSize="16" Style="{DynamicResource TabItemStyle_一级标签}" Foreground="White" FocusVisualStyle="{x:Null}">
                 <Grid Margin="-2">
