--- a/WpfApplication3/View/Pages/Page_添加数据.xaml
+++ b/WpfApplication3/View/Pages/Page_添加数据.xaml
@@ -14,12 +14,12 @@
         </Grid.ColumnDefinitions>
         <Button x:Name="Button_添加数据_保存" Content="保存" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Height="20" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White" Click="Button_添加数据_保存_Click"/>
         <Button x:Name="Button_添加数据_取消" Content="取消" HorizontalAlignment="Left" Margin="10,0,0,10" VerticalAlignment="Bottom" Width="75" Grid.Column="1" Height="20" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White" Click="Button_添加数据_取消_Click"/>
-        <DataGrid x:Name="DataGrid_添加数据" Margin="10,121,10,72" Grid.ColumnSpan="2" AutoGenerateColumns="False" FontSize="14">
+        <DataGrid x:Name="DataGrid_添加数据" Margin="10,100,10,72" Grid.ColumnSpan="2" AutoGenerateColumns="False" FontSize="14">
             <DataGrid.Columns>
                 <DataGridTemplateColumn Header="日期">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <DatePicker SelectedDate="{Binding 时间}" BorderBrush="{x:Null}" BorderThickness="0" Margin="0" VerticalAlignment="Stretch" Height="22" Width="120"/>
+                            <DatePicker  SelectedDate="{Binding 时间}" BorderBrush="{x:Null}" BorderThickness="0" Margin="0" Height="22" Width="120"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -27,7 +27,6 @@
                 <DataGridTextColumn Header="用途" Binding="{Binding 用途}" MinWidth="200"/>
                 <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" MinWidth="100" ElementStyle="{DynamicResource TextBlockStyle_右对齐}"/>
                 <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" MinWidth="100" ElementStyle="{DynamicResource TextBlockStyle_右对齐}"/>
-                <DataGridTemplateColumn/>
             </DataGrid.Columns>
         </DataGrid>
         <Label Content="添加数据" HorizontalAlignment="Center" Margin="0,34,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="18"/>
