--- a/WpfApplication3/View/Pages/Page_添加数据.xaml
+++ b/WpfApplication3/View/Pages/Page_添加数据.xaml
@@ -14,12 +14,12 @@
         </Grid.ColumnDefinitions>
         <Button x:Name="Button_添加数据_保存" Content="保存" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Height="20" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White" Click="Button_添加数据_保存_Click"/>
         <Button x:Name="Button_添加数据_取消" Content="取消" HorizontalAlignment="Left" Margin="10,0,0,10" VerticalAlignment="Bottom" Width="75" Grid.Column="1" Height="20" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White" Click="Button_添加数据_取消_Click"/>
-        <DataGrid x:Name="DataGrid_添加数据" Margin="10,100,10,72" Grid.ColumnSpan="2" AutoGenerateColumns="False" FontSize="14">
+        <DataGrid x:Name="DataGrid_添加数据" Margin="10,100,10,72" Grid.ColumnSpan="2" AutoGenerateColumns="False" FontSize="14" CellEditEnding="DataGrid_添加数据_CellEditEnding">
             <DataGrid.Columns>
-                <DataGridTemplateColumn Header="日期">
+                <DataGridTemplateColumn Header="日期" MinWidth="120">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <DatePicker  SelectedDate="{Binding 时间}" BorderBrush="{x:Null}" BorderThickness="0" Margin="0" Height="22" Width="120"/>
+                            <DatePicker x:Name="DatePickerInDataGrid" SelectedDate="{Binding 时间}" BorderBrush="{x:Null}" BorderThickness="0" Margin="0" Height="22" Width="120" CalendarClosed="DatePickerInDataGrid_CalendarClosed"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
