--- a/WpfApplication3/View/Pages/Page_主内容.xaml
+++ b/WpfApplication3/View/Pages/Page_主内容.xaml
@@ -42,13 +42,13 @@
         <TextBlock HorizontalAlignment="Right" Margin="0,45,231,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top"  RenderTransformOrigin="1.37,0.44" Height="20" OpacityMask="White"  />
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,15" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom"   />
         <TextBlock HorizontalAlignment="Left" Margin="330,0,0,15" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom"   />
-        <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Left" Margin="135,0,0,15" TextWrapping="Wrap"  VerticalAlignment="Bottom"  Width="150" Height="15"/>
-        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Left" Margin="453,0,0,15" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" Height="15"/>
+        <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Left" Margin="135,0,0,13" TextWrapping="Wrap"  VerticalAlignment="Bottom"  Width="150" FontSize="14"/>
+        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Left" Margin="453,0,0,13" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" FontSize="14"/>
         <TextBlock HorizontalAlignment="Center" Margin="0,10,50,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" />
         <TextBlock HorizontalAlignment="Left" Margin="10,0,0,50" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom"   />
         <TextBlock HorizontalAlignment="Left" Margin="330,0,0,50" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom"   />
-        <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Left" Margin="135,0,0,50" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" Height="15"/>
-        <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Left" Margin="453,0,0,50" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" Height="15"/>
+        <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Left" Margin="135,0,0,48" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" FontSize="14"/>
+        <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Left" Margin="453,0,0,48" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" FontSize="14"/>
         <Button x:Name="Button_添加" Content="添加" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75"  Focusable="False" Height="25" Click="Button_添加_Click" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White"/>
         <Grid HorizontalAlignment="Left" Height="1" Margin="10,0,0,40" VerticalAlignment="Bottom" Width="625" Background="#FF747474" IsEnabled="False"/>
         <Grid x:Name="Grid_弹出_添加数据" Margin="0" Background="#7F000000" Visibility="Collapsed">
