--- a/WpfApplication3/View/Pages/Page_主内容.xaml
+++ b/WpfApplication3/View/Pages/Page_主内容.xaml
@@ -26,10 +26,11 @@
             </DataGrid>
         </Grid>
         <!--Button-->
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_添加" Content="添加" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75"  Focusable="False" Height="25" Click="Button_添加_Click" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White"/>
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,133,10,0" VerticalAlignment="Top" Width="75" Height="25"   Focusable="False" Click="Button_删除_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}"  />
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新" Content="保存" HorizontalAlignment="Right" Margin="0,198,10,0" VerticalAlignment="Top" Width="75" Height="25"  Focusable="False" Click="Button_刷新_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Visibility="Collapsed"   />
-        <Button FocusVisualStyle="{x:Null}" x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,0,10,113" VerticalAlignment="Bottom" Width="75" Height="25"  Focusable="False" Click="Button_导入Excel_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}"   />
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_Excel" Content="导出数据" HorizontalAlignment="Right" Margin="0,0,10,143" VerticalAlignment="Bottom" Width="75"  Height="25" Focusable="False" Click="Button_Excel_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}"   />
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,0,10,113" VerticalAlignment="Bottom" Width="75" Height="25"  Focusable="False" Click="Button_导入Excel_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}"   />
 
         <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="50,43,0,0" VerticalAlignment="Top" Width="80"  ToolTip="年份" SelectionChanged="ComboBox_Year_SelectionChanged"   />
         <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="135,43,0,0" VerticalAlignment="Top" Width="60" IsReadOnly="True"  ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged"   />
@@ -49,7 +50,7 @@
         <TextBlock HorizontalAlignment="Left" Margin="330,0,0,50" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom"   />
         <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Left" Margin="135,0,0,48" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" FontSize="14"/>
         <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Left" Margin="453,0,0,48" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" FontSize="14"/>
-        <Button x:Name="Button_添加" Content="添加" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75"  Focusable="False" Height="25" Click="Button_添加_Click" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White"/>
+        
         <Grid HorizontalAlignment="Left" Height="1" Margin="10,0,0,40" VerticalAlignment="Bottom" Width="600" Background="#FF747474" IsEnabled="False"/>
         <GroupBox x:Name="GroupBox_通知" Header="通知" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="55" Width="280" Margin="0,0,100,10">
             <TextBlock x:Name="TextBlock_通知信息" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14"><Run Language="zh-cn" Text="成功添加6条记录。"/></TextBlock>
