--- a/WpfApplication3/View/Pages/Page_主内容.xaml
+++ b/WpfApplication3/View/Pages/Page_主内容.xaml
@@ -42,19 +42,20 @@
         <TextBox x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,43,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"  IsReadOnly="True" Height="20" />
 
         <!--TextBlock-->
+        <TextBlock HorizontalAlignment="Center" Margin="0,10,50,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" />
         <TextBlock HorizontalAlignment="Left" Margin="10,45,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20"   />
         <TextBlock HorizontalAlignment="Right" Margin="0,45,231,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top"  RenderTransformOrigin="1.37,0.44" Height="20" OpacityMask="White"  />
-        <TextBlock HorizontalAlignment="Left" Margin="10,0,0,15" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom"   />
-        <TextBlock HorizontalAlignment="Left" Margin="330,0,0,15" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom"   />
-        <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Left" Margin="135,0,0,13" TextWrapping="Wrap"  VerticalAlignment="Bottom"  Width="150" FontSize="14"/>
-        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Left" Margin="453,0,0,13" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" FontSize="14"/>
-        <TextBlock HorizontalAlignment="Center" Margin="0,10,50,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" />
-        <TextBlock HorizontalAlignment="Left" Margin="10,0,0,50" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom"   />
-        <TextBlock HorizontalAlignment="Left" Margin="330,0,0,50" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom"   />
-        <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Left" Margin="135,0,0,48" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" FontSize="14"/>
-        <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Left" Margin="453,0,0,48" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150" FontSize="14"/>
-
-        <Grid HorizontalAlignment="Left" Height="1" Margin="10,0,0,40" VerticalAlignment="Bottom" Width="600" Background="#FF747474" IsEnabled="False"/>
+        <Grid Background="White" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,10">
+            <Grid Height="1" Margin="0,0,0,30" VerticalAlignment="Bottom" Background="#FF747474" IsEnabled="False"/>
+            <TextBlock HorizontalAlignment="Left" Margin="0,0,0,5" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom"   />
+            <TextBlock HorizontalAlignment="Left" Margin="306,0,0,5" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom"   />
+            <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Left" Margin="121,0,0,3" TextWrapping="Wrap"  VerticalAlignment="Bottom"  Width="180" FontSize="14"/>
+            <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Left" Margin="427,0,0,3" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="176" FontSize="14"/>
+            <TextBlock HorizontalAlignment="Left" Margin="0,0,0,40" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom"   />
+            <TextBlock HorizontalAlignment="Left" Margin="306,0,0,39" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom"   />
+            <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Left" Margin="121,0,0,38" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="180" FontSize="14"/>
+            <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Left" Margin="427,0,0,38" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="176" FontSize="14"/>
+        </Grid>
         <Grid x:Name="Grid_弹出_添加数据" Margin="0" Background="#7F000000" Visibility="Collapsed">
             <Frame x:Name="Frame_弹出_添加数据" Content="" HorizontalAlignment="Right" Margin="0" Width="800" Background="White" NavigationUIVisibility="Hidden"/>
         </Grid>
