--- a/WpfApplication3/NewWindow.xaml
+++ b/WpfApplication3/NewWindow.xaml
@@ -6,7 +6,7 @@
         <Label Content="金字塔财务管理工具" HorizontalAlignment="Center" Margin="22,5,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
         <Image HorizontalAlignment="Center" Height="28" Margin="0,5,145,0" VerticalAlignment="Top" Source="View/Image/Pyramid_Logo_128x128.ico">
             <Image.Effect>
-                <DropShadowEffect Color="White" ShadowDepth="1" BlurRadius="1"/>
+                <DropShadowEffect Color="White" BlurRadius="2" ShadowDepth="0"/>
             </Image.Effect>
         </Image>
         <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom" Background="#FF2E2E2E">
