删掉设置里面：起始年，结束年的设置以及相关保存功能

--- a/WpfApplication3/View/Windows/SettingsWindow.xaml
+++ b/WpfApplication3/View/Windows/SettingsWindow.xaml
@@ -10,11 +10,7 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <TextBox x:Name="TextBox_起始年" HorizontalAlignment="Left" Height="20" Margin="85,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50"/>
-                    <TextBox x:Name="TextBox_结束年" HorizontalAlignment="Left" Height="20" Margin="152,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" Grid.ColumnSpan="2"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="10,13,0,0" TextWrapping="Wrap" Text="年份范围：" VerticalAlignment="Top" Height="16" Width="70"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="140,11,0,0" TextWrapping="Wrap" Text="-" VerticalAlignment="Top" Height="16" Width="7"/>
-                    <Button x:Name="Button_保存设置" Content="保存" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="75" Click="Button_保存设置_Click" Height="25" Grid.ColumnSpan="2"/>
+                    <Button x:Name="Button_保存设置" Content="保存" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="75" Click="Button_保存设置_Click" Height="25" Grid.ColumnSpan="2" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White"/>
                     <TextBlock HorizontalAlignment="Left" Margin="10,37,0,0" TextWrapping="Wrap" Text="初始金额：" VerticalAlignment="Top"/>
                     <TextBox x:Name="Textbox_初始金额_1" HorizontalAlignment="Left" Height="20" Margin="17,35,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
                     <TextBlock x:Name="TextBlock_初始金额_1" HorizontalAlignment="Left" Margin="85,37,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="20" Grid.ColumnSpan="2" Width="117"/>
@@ -40,7 +36,7 @@
                     <PasswordBox x:Name="PasswordBox_旧密码" HorizontalAlignment="Center" Margin="0,40,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2" Height="18"/>
                     <PasswordBox x:Name="PasswordBox_新密码" HorizontalAlignment="Center" Margin="0,80,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2" Height="18"/>
                     <PasswordBox x:Name="PasswordBox_重复新密码" HorizontalAlignment="Center" Margin="0,120,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2" Height="18"/>
-                    <Button FocusVisualStyle="{x:Null}" x:Name="Button_提交修改密码" Content="修改密码" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="75" Click="Button_提交修改密码_Click" Grid.ColumnSpan="2" Height="25"/>
+                    <Button FocusVisualStyle="{x:Null}" x:Name="Button_提交修改密码" Content="修改密码" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="75" Click="Button_提交修改密码_Click" Grid.ColumnSpan="2" Height="25" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White"/>
                     <TextBlock HorizontalAlignment="Left" Margin="55,40,0,0" TextWrapping="Wrap" Text="旧密码：" VerticalAlignment="Top" Height="16" Width="56"/>
                     <TextBlock HorizontalAlignment="Left" Margin="55,80,0,0" TextWrapping="Wrap" Text="新密码：" VerticalAlignment="Top" Height="16" Width="56"/>
                     <TextBlock HorizontalAlignment="Left" Margin="55,120,0,0" TextWrapping="Wrap" Text="重复新密码：" VerticalAlignment="Top" Height="16" Width="84"/>
