--- a/WpfApplication3/NewWindow.xaml
+++ b/WpfApplication3/NewWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Wpf.NewWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="NewWindow" Height="600" Width="1000 " WindowStartupLocation="CenterScreen" AllowsTransparency="True" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown" Closed="Window_Closed" SizeChanged="Window_SizeChanged">
+        Title="金字塔财务管理工具" Height="600" Width="1000 " WindowStartupLocation="CenterScreen" AllowsTransparency="True" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown" Closed="Window_Closed" SizeChanged="Window_SizeChanged">
     <Grid Background="#FF2E2E2E">
         <Label Content="金字塔财务管理工具" HorizontalAlignment="Center" Margin="22,5,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
         <Image HorizontalAlignment="Center" Height="28" Margin="0,5,145,0" VerticalAlignment="Top" Source="View/Image/Pyramid_Logo_128x128.ico">
