设置窗口不允许Resize

--- a/WpfApplication3/View/Windows/SettingsWindow.xaml
+++ b/WpfApplication3/View/Windows/SettingsWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Name="Win_Settings" x:Class="Wpf.View.Windows.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置" Height="300" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14" FontFamily="SimSun" MinWidth="400" MinHeight="300">
+        Title="设置" Height="300" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14" FontFamily="SimSun" MinWidth="400" MinHeight="300" ResizeMode="NoResize">
     <Grid x:Name="Grid_Settings">
         <TabControl Margin="0">
             <TabItem FocusVisualStyle="{x:Null}" Header="软件设置">
