--- a/WpfApplication3/NewWindow.xaml
+++ b/WpfApplication3/NewWindow.xaml
@@ -14,7 +14,7 @@
             <StatusBarItem x:Name="StatusBarItem_时间" Content="时间" Height="25" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,10,0" Foreground="White"/>
         </StatusBar>
         <Menu HorizontalAlignment="Left" Height="25" Margin="10,10,0,0" VerticalAlignment="Top" Width="200" Background="{x:Null}" Foreground="White" Focusable="False">
-            <MenuItem Header="文件" Height="25">
+            <MenuItem Header="文件" Height="25" BorderBrush="{x:Null}" Background="{x:Null}">
                 <MenuItem x:Name="MenuItem_OpenCalculators" Header="计算器" Foreground="Black" Click="MenuItem_OpenCalculators_Click"/>
                 <MenuItem x:Name="MenuItem_OpenExcelOutputFolder" Header="打开Excel目录" Foreground="Black" Click="MenuItem_OpenExcelOutputFolder_Click"/>
                 <MenuItem x:Name="MenuItem_导入Excel" Header="导入Excel" Foreground="Black" Click="MenuItem_导入Excel_Click"/>
@@ -22,7 +22,7 @@
                 <Separator Margin="0"/>
                 <MenuItem x:Name="MenuItem_退出" Header="退出" Foreground="Black" Click="MenuItem_退出_Click"/>
             </MenuItem>
-            <MenuItem x:Name="MenuItem_帮助" Header="帮助">
+            <MenuItem x:Name="MenuItem_帮助" Header="帮助" Background="{x:Null}" BorderBrush="{x:Null}">
                 <MenuItem x:Name="MenuItem_拷贝无密码数据库" Header="拷贝无密码数据库" Foreground="Black" Click="MenuItem_拷贝无密码数据库_Click"/>
                 <Separator Margin="0"/>
                 <MenuItem x:Name="MenuItem_关于" Header="关于" Foreground="Black" Click="MenuItem_关于_Click"/>
